# powder_dissolution

./: .gitignore  README.md  pyproject.toml
src/: constants.py  data_loader.py  powder_describer.py  scrip_utils.py  visualisation.py
src/augmentation/: mk_augmentation.py  mk_augmentation_config.yml.example
src/diffusion/: calc_diffusion.py  calc_diffusion_config.yml.example
src/inference/: mk_predict.py  mk_predict_config.yml.example
src/training/: train_model.py  train_model_config.yml.example
