[tool.poetry]
name = "powder"
version = "0.1.0"
description = ""
authors = ["mrYush <yuriy.simonov@tedo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
poethepoet = "^0.24.1"
opencv-python = "^4.8.1.78"
pycocotools = "^2.0.7"
tqdm = "^4.66.1"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.1"
plotly = "^5.17.0"
nbformat = "^5.9.2"
openpyxl = "^3.1.2"
pyyaml = "^6.0.1"

[tool.poe.tasks]
torch-cuda11 = "python -m pip install torch torchvision torchaudio  --index-url https://download.pytorch.org/whl/cu118"
torch-cpu = "python -m pip install torch torchvision torchaudio"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
